add first version

--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>title</title>
-    <link rel="stylesheet" href="style.css">
+    <title>comments</title>
   </head>
   <body>
-  	<p>Hi.</p>
   	<div id="app" />
   	<script>
-		var s = document.createElement('script'); 
-		s.src = "./lib/react-widget-library.min.js";
+		var s = document.createElement('script');
+		s.src = "./lib/comments-widget.js";
 		s.async = true;
 		document.body.appendChild(s);
 	</script>
